--- a/src/layouts/MarkdownPostLayout.astro
+++ b/src/layouts/MarkdownPostLayout.astro
@@ -6,25 +6,41 @@ const { frontmatter } = Astro.props;
 <BaseLayout pageTitle={frontmatter.title}>
   <p>{frontmatter.pubDate.toString().slice(0, 10)}</p>
   <h4><em>{frontmatter.description}</em></h4>
+
   <p>Written by: {frontmatter.author}</p>
+
   <img src={frontmatter.image.url} width="300" alt={frontmatter.image.alt} />
+
   <div class="tags">
-    {frontmatter.tags.map((tag) => <p class="tag">#{tag}</p>)}
+    {
+      frontmatter.tags.map((tag) => (
+        <p class="tag">
+          <a href={`/tags/${tag}`}>{tag}</a>
+        </p>
+      ))
+    }
   </div>
-  <hr />
+
   <slot />
 </BaseLayout>
 
 <style>
+  a {
+    color: #00539F;
+  }
+
   .tags {
     display: flex;
-    gap: 10px;
+    flex-wrap: wrap;
   }
 
   .tag {
-    background-color: palevioletred;
-    padding: 5px;
-    border-radius: 5px;
-    color: white;
+    margin: 0.25em;
+    border: dotted 1px #a1a1a1;
+    border-radius: .5em;
+    padding: .5em 1em;
+    font-size: 1.15em;
+    background-color: #F8FCFD;
   }
 </style>
+
