--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -3,6 +3,19 @@ html {
   font-family: sans-serif;
 }
 
+html.dark {
+  background-color: #1a202c;
+  color: #fff;
+}
+
+.dark .nav-links a {
+  color: #fff;
+}
+
+#themeToggle {
+  cursor: pointer;
+}
+
 body {
   margin: 0 auto;
   width: 100%;
